# SQL_RAG

./: .coverage  .gitignore  ANALYSIS.md  Makefile  README.md  USER_GUIDE.md  coverage.txt  demo.db  env.example  inspect_schema.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_demo.ps1  schema.json  test_ollama.py  test_schema_export.json  verify_config.py
.github/: copilot-instructions.md
SPARC_Documents/: 3_User_Scenarios.md  4_UIUX_Requirements.md  5_File_Structure.md  6_Assumptions_Requirements.md  7_Reflection.md  Architecture_Requirements.md  Completion_Document.md  NonFunctional_Requirements.md  Pseudocode_Requirements.md  Refinement_Document.md  SQL LLM RAG Project SPARC.md
config/: database.yaml  logging.yaml  ollama.yaml  rag.yaml  security.yaml
config/environments/: development.yaml  production.yaml  staging.yaml
data/vector_db_demo/: chroma.sqlite3
scripts/: debug_retrieval.py  export_schema.py  ingest_schema.py  inspect_healthyr.py  inspect_schema.py  rebuild_demo_db.py  robust_test_demo.py  setup_demo.py  setup_healthyr_demo.py  verify_data_only.py  verify_demo.py
src/: __init__.py  main.py
src/core/: __init__.py  config.py  exceptions.py  logger.py  orchestrator.py  rate_limiter.py
src/database/: __init__.py  connection_pool.py  models.py  query_executor.py  schema_loader.py
src/llm/: __init__.py  models.py  ollama_client.py  prompt_builder.py  sql_parser.py
src/rag/: __init__.py  context_retriever.py  embedding_service.py  models.py  vector_store.py
test/: chroma.sqlite3
tests/: conftest.py  test_validation.py
(+30 files in other folders)
