[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-rag-ollama"
version = "0.1.0"
description = "Local LLM RAG SQL Query Application"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "chromadb>=0.4.0",
    "langchain>=0.1.0",
    "ollama>=0.1.0",
    "pandas>=2.0.0",
    "pyodbc>=5.0.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.30.0",
    "sentence-transformers>=2.2.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "pylint>=3.0.0",
    "mypy>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
